--- a/src/app/products/_components/product-list.module.scss
+++ b/src/app/products/_components/product-list.module.scss
@@ -3,7 +3,8 @@
   bottom: 16;
   left: 50%;
   translate: -50% 0;
-  width: 468px;
+  // width: 468px;
+  width: calc(100vw - 32px);
   justify-content: space-between !important;
   font-weight: 700;
   z-index: 10;
